@@ -3,3 +3,23 @@
 
 ## C Sharp
 Currently fixing GUI interaction with timer
+### Features
+- Customizability over time between breaks
+- customizability over length of break time
+- Customizability over what plays
+- Off/off switch
+### Code
+Made without any external libraries. Garbage code don't even worry about it.
+
+## Java
+Java version!!
+### Features
+- Has a bell schedule
+- Basic GUI
+### Code
+Made using JavaFX to run use the following command:
+```
+$ java --module-path "path/to/JavaFX" --add-modules javafx.controls,javafx.fxml,javafx.media -jar "path/to/jar"
+```
+Still a work in progress ;-;
+This version has no customizability (unless you edit the code)
